Load event logs from redis on page and api if job is in progress

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -17,6 +17,9 @@ services:
     # Set by login or token middleware
     currentUser:         { synthetic: true }
 
+    hal.build:           { synthetic: true }
+    hal.push:            { synthetic: true }
+
     hal.user:            { synthetic: true }
     hal.userType:        { synthetic: true }
     hal.userPermission:  { synthetic: true }
