--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -99,7 +99,7 @@ parameters:
         build:
             method: 'GET'
             route: '/builds/:build'
-            stack: ['middleware.login', 'build.page']
+            stack: ['middleware.login', 'middleware.requireEntity', 'build.page']
             conditions: {build: %routes.regex.buildId%}
 
         build.start:
@@ -115,7 +115,7 @@ parameters:
         push:
             method: 'GET'
             route: '/pushes/:push'
-            stack: ['middleware.login', 'push.page']
+            stack: ['middleware.login', 'middleware.requireEntity', 'push.page']
             conditions: {push: %routes.regex.pushId%}
 
         push.start:
