--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -10,9 +10,9 @@ imports:
 
 services:
 
-    ######################################################################################################################
+    ####################################################################################################################
     # RUN TIME INJECTED (SYNTHETIC) SERVICES
-    ######################################################################################################################
+    ####################################################################################################################
 
     # Set by login or token middleware
     currentUser:         { synthetic: true }
@@ -34,9 +34,9 @@ services:
     hal.view:            { synthetic: true }
     hal.pool:            { synthetic: true }
 
-    ######################################################################################################################
+    ####################################################################################################################
     # DOCTRINE CONFIGURATION
-    ######################################################################################################################
+    ####################################################################################################################
 
     doctrine.proxy.dir:
         class: 'stdClass'
@@ -75,9 +75,9 @@ services:
         class: 'QL\Hal\Utility\LazyUserRetriever'
         arguments: [@service_container]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # SLIM
-    ######################################################################################################################
+    ####################################################################################################################
 
     slim:
         parent: 'panthor.slim'
@@ -87,14 +87,15 @@ services:
             - ['add', [@slim.session]]
 
     slim.hook.logger:
-        class: 'QL\Hal\Slim\McpLoggerHook'
+        class: 'QL\Panthor\Slim\McpLoggerHook'
         arguments: [@logger.mcp.factory]
     slim.hook.errors:
-        class: 'QL\Hal\Slim\ErrorHandlerHook'
-        arguments:
-            - @exception.dispatcher
-            - @logger
-            - @error.pages.twig
+        class: 'QL\Panthor\ErrorHandling\ErrorHandler'
+        arguments: [@logger]
+        configurator: [@exception.configurator, 'attach']
+        calls:
+            - ['setStacktraceLogging', [true]]
+
     app.slim.hook.routes:
         parent: 'slim.hook.routes'
         calls:
@@ -114,24 +115,25 @@ services:
         factory: ['QL\Panthor\Utility\Stringify', 'template']
         arguments: ['%%s/%%s', [@root, '.hal9000.push.yml']]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # TRP COOKIES
-    ######################################################################################################################
+    ####################################################################################################################
 
     cookie.encryption:
         class: 'QL\Panthor\Http\CookieEncryption\TRPCookieEncryption'
         arguments: [@panthor.encryption.trp]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # ERROR & EXCEPTION HANDLING
-    ######################################################################################################################
+    ####################################################################################################################
 
-    exception.dispatcher:
-        class: 'QL\ExceptionToolkit\ExceptionDispatcher'
+    exception.configurator:
+        class: 'QL\Hal\Slim\ExceptionConfigurator'
+        arguments: [@error.pages.twig]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # CACHING
-    ######################################################################################################################
+    ####################################################################################################################
 
     cache:
         class: 'MCP\Cache\PredisCache'
@@ -141,9 +143,9 @@ services:
         class: 'QL\Hal\Github\MCPCache'
         arguments: [@cache]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # HELPERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     utility.name.formatter:
         class: 'QL\Hal\Utility\NameFormatter'
