Use custom mcp logger hook to get correct hostname

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -87,7 +87,7 @@ services:
             - ['add', [@slim.session]]
 
     slim.hook.logger:
-        class: 'QL\Panthor\Slim\McpLoggerHook'
+        class: 'QL\Hal\Slim\McpLoggerHook'
         arguments: [@logger.mcp.factory]
     slim.hook.errors:
         class: 'QL\Panthor\ErrorHandling\ErrorHandler'
