Add logging when qks/crypto during deployment fails

--- a/configuration/kraken/kraken.services.yml
+++ b/configuration/kraken/kraken.services.yml
@@ -23,6 +23,7 @@ services:
             - @kraken.crypto.db
             - @kraken.crypto.factory
             - @json
+            - @logger
 
     kraken.diff:
         class: 'QL\Kraken\ConfigurationDiffService'
