--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -99,6 +99,27 @@ services:
         class: 'QL\Hal\Core\Crypto\Encrypter'
         arguments: [%encrypter.publickey%]
 
+    decrypter:
+        class: 'QL\Hal\Core\Crypto\Decrypter'
+        factory: [@decrypter.factory, 'getAsymmetricDecrypter']
+        lazy: true
+
+    decrypter.factory:
+        class: 'QL\Hal\Core\Crypto\CryptoFactory'
+        arguments:
+            - @encrypter.encryptedkey.squished
+            - @encrypter.secret.file
+
+    encrypter.encryptedkey.squished:
+        class: 'stdClass'
+        factory: ['QL\Hal\Application\Stringify', 'squish']
+        arguments: [%encrypter.encryptedkey%]
+
+    encrypter.secret.file:
+        class: 'stdClass'
+        factory: ['QL\Panthor\Utility\Stringify', 'template']
+        arguments: ['%%s/%%s', [@root, %encrypter.hal.secret.path%]]
+
     ######################################################################################################################
     # TWIG STUFF
     ######################################################################################################################
