--- a/configuration/routes/routes.application.yml
+++ b/configuration/routes/routes.application.yml
@@ -218,7 +218,7 @@ parameters:
 
         encrypted.view:
             method: 'GET'
-            route: '/applications/:application/encrypted-properties/:encrypted/view'
+            route: '/applications/:application/encrypted-properties/:encrypted'
             stack: ['middleware.admin', 'middleware.requireEntity', 'encrypted.view.page']
             conditions:
                 application: %routes.regex.digit%
