--- a/configuration/kraken/kraken.services.yml
+++ b/configuration/kraken/kraken.services.yml
@@ -23,7 +23,7 @@ services:
             - @kraken.crypto.db
             - @kraken.crypto.factory
             - @json
-            - @logger
+            - @exception.logger
 
     kraken.diff:
         class: 'QL\Kraken\ConfigurationDiffService'
