Fix bug in lead acl middleware

--- a/configuration/di/services.middleware.yml
+++ b/configuration/di/services.middleware.yml
@@ -29,6 +29,7 @@ services:
             - @denied.twig
             - @permissions
             - @slim.halt
+            - @slim.route.parameters
 
     middleware.admin:
         class: 'QL\Hal\Middleware\ACL\AdminMiddleware'
