Add ACL class for controller-level ACL
Prevent leads from changing prod QKS keys

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -177,6 +177,14 @@ services:
     guzzle:
         class: 'GuzzleHttp\Client'
 
+    acl:
+        class: 'QL\Hal\ACL'
+        arguments:
+            - @denied.twig
+            - @slim.halt
+            - @permissions
+            - @currentUser
+
     ####################################################################################################################
     # SESSION
     ####################################################################################################################
