Enable deploy permission ACL on kraken property add/edit/remove

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -183,6 +183,7 @@ services:
             - @denied.twig
             - @slim.halt
             - @permissions
+            - @kraken.permissions
             - @currentUser
 
     ####################################################################################################################
