--- a/configuration/kraken/kraken.pages.yml
+++ b/configuration/kraken/kraken.pages.yml
@@ -335,6 +335,7 @@ services:
             - @kraken.diff
             - @kraken.validator.property
             - @slim.not.found
+            - @acl
     kraken.property.add.twig:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/configuration/latest/property.add.twig']]]
@@ -349,6 +350,7 @@ services:
             - @kraken.validator.property
             - @json
             - @session.flasher
+            - @acl
     kraken.property.edit.twig:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/configuration/latest/property.edit.twig']]]
@@ -359,6 +361,7 @@ services:
             - @kraken.property.remove.twig
             - @kraken.property
             - @doctrine.em
+            - @acl
     kraken.property.remove.twig:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/configuration/latest/property.remove.twig']]]
@@ -369,6 +372,7 @@ services:
             - @kraken.property
             - @doctrine.em
             - @session.flasher
+            - @acl
 
     ####################################################################################################################
     # DEPLOY
