Separate kraken acl into own class

--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -91,6 +91,14 @@ services:
             - @redis
             - @json
 
+    acl:
+        class: 'QL\Hal\ACL'
+        arguments:
+            - @denied.twig
+            - @slim.halt
+            - @permissions
+            - @currentUser
+
     ####################################################################################################################
     # Crypto
     ####################################################################################################################
