--- a/configuration/kraken/kraken.pages.yml
+++ b/configuration/kraken/kraken.pages.yml
@@ -384,6 +384,7 @@ services:
             - @kraken.deploy.twig
             - @kraken.target
             - @kraken.diff
+            - @kraken.acl
     kraken.deploy.twig:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/configuration/deploy.twig']]]
@@ -397,6 +398,7 @@ services:
             - @currentUser
             - @session.flasher
             - @kraken.random
+            - @kraken.acl
 
     kraken.rollback.page:
         class: 'QL\Kraken\Controller\Configuration\RollbackController'
@@ -406,6 +408,7 @@ services:
             - @kraken.diff
             - @session.flasher
             - @doctrine.em
+            - @kraken.acl
     kraken.rollback.twig:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/configuration/rollback.twig']]]
@@ -419,3 +422,4 @@ services:
             - @currentUser
             - @session.flasher
             - @kraken.random
+            - @kraken.acl
