Allow configuration history to be filtered

--- a/configuration/kraken/kraken.pages.yml
+++ b/configuration/kraken/kraken.pages.yml
@@ -133,6 +133,7 @@ services:
             - @kraken.configuration.history.twig
             - @kraken.application
             - @doctrine.em
+            - @slim.request
             - @slim.not.found
             - @slim.route.parameters
     kraken.configuration.history.twig:
