Update to hal-core 2.8.1

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
     },
     "repositories": [
-        { "type": "composer", "url": "http://composer/" }
+        { "type": "composer", "url": "http://composer" }
     ],
 
     "require": {
@@ -36,7 +36,7 @@
         "psr/log": "*",
 
         "ql/exception-toolkit": "~1.0",
-        "ql/hal-core": "~2.8.0",
+        "ql/hal-core": "~2.8.1",
         "ql/http-problem": "~1.0",
 
         "ql/mcp-cache":         "~2.2",
