Use users selected deployment view on push start

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -186,6 +186,7 @@ services:
         arguments:
             - @push.start.twig
             - @doctrine.em
+            - @pools
             - @slim.request
             - @slim.not.found
             - @slim.route.parameters
