--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
         "nunjucks": "1.3.3",
         "sugarjs-date": "~1.5",
         "svg4everybody": "1.0.0",
-        "typed.js": "v1.1",
+        "typed.js": "https://github.com/mattboldt/typed.js.git#e941476a558938151edfafa13ef5c924d22da8ff",
 
         "primer-css": "2.1.0",
 
