Limit build refs to 3 per row, and highlight user owned PRs

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -141,6 +141,7 @@ services:
             - @github
             - @slim.request
             - @hal.application
+            - @currentUser
     build.start.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['build/start.twig']]]
